--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=الرجاء إختيار بلد.
 please-select-a-course=الرجاء إختيار بلد.
 please-select-a-currency=الرجاء إختيار بلد.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=يُرجى تحديد لغة افتراضية بين اللغات المتاحة في الموقع (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=يُرجى تحديد نطاق توزيع.
 please-select-a-document-type=الرجاء إختيار نوع.
 please-select-a-duration=الرجاء إختيار منطقة.
@@ -11369,6 +11370,7 @@ please-select-a-location=الرجاء إختيار خيار.
 please-select-a-menu-item-to-continue=يُرجى تحديد عنصر قائمة للمتابعة.
 please-select-a-method-on-the-left=يرجى اختيار طريقة على اليسار.
 please-select-a-new-repository-hook=يرجى اختيار مستودع ربط جديد.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=الرجاء إختيار منطقة.
 please-select-a-region=الرجاء إختيار منطقة.
 please-select-a-response=الرجاء إختيار منطقة.
