--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11361,6 +11361,7 @@ please-select-a-country=Seleccioneu un país.
 please-select-a-course=Seleccioneu un curs.
 please-select-a-currency=Seleccioneu una moneda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Seleccioneu un llenguatge per defecte entre els llenguatges disponibles al lloc (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Seleccioneu un àmbit de distribució.
 please-select-a-document-type=Seleccioneu un tipus de regla.
 please-select-a-duration=Seleccioneu una durada.
@@ -11371,6 +11372,7 @@ please-select-a-location=Seleccioneu una localització.
 please-select-a-menu-item-to-continue=Seleccioneu un element de menú per continuar.
 please-select-a-method-on-the-left=Seleccioneu un mètode dels de l'esquerra.
 please-select-a-new-repository-hook=Seleccioneu un ganxo de repositori nou.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Seleccioneu un producte.
 please-select-a-region=Seleccioneu una regió.
 please-select-a-response=Seleccioneu una resposta.
