--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Zadejte prosím stát/zemi.
 please-select-a-course=Vyberte prosím kurz.
 please-select-a-currency=Zadejte prosím měnu.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Vyberte prosím výchozí jazyk z dostupných jazyků webu (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vyberte, prosím, rozsah distribuce.
 please-select-a-document-type=Zvolte, prosím, platný typ pravidla.
 please-select-a-duration=Zadejte prosím dobu trvání.
@@ -11369,6 +11370,7 @@ please-select-a-location=Zvolte prosím umístění.
 please-select-a-menu-item-to-continue=Chcete-li pokračovat, vyberte položku nabídky. (Automatic Translation)
 please-select-a-method-on-the-left=Zvolte prosím metodu vlevo.
 please-select-a-new-repository-hook=Vyberte prosím nový "hook repositář".
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Zvolte prosím výrobek.
 please-select-a-region=Zvolte prosím region.
 please-select-a-response=Zvolte prosím odpověď.
