--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11361,6 +11361,7 @@ please-select-a-country=Bitte wählen Sie ein Land.
 please-select-a-course=Bitte wählen Sie einen Kurs.
 please-select-a-currency=Bitte wählen Sie Währung.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Bitte eine Standardsprache aus den verfügbaren Sprachen der Website wählen (<em>{0}</em>) .
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Bitte wählen Sie den Verteilungsbereich.
 please-select-a-document-type=Bitte wählen Sie einen gültigen Richtlinientyp.
 please-select-a-duration=Bitte wählen Sie eine Dauer.
@@ -11371,6 +11372,7 @@ please-select-a-location=Bitte wählen Sie einen Ort.
 please-select-a-menu-item-to-continue=Bitte wählen Sie einen Menüpunkt aus, um fortzufahren.
 please-select-a-method-on-the-left=Wählen Sie links eine Methode.
 please-select-a-new-repository-hook=Wählen Sie bitte einen neuen Repository-Hook.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Bitte wählen Sie ein Produkt.
 please-select-a-region=Bitte wählen Sie eine Region.
 please-select-a-response=Bitte wählen Sie eine Antwort.
