--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Παρακαλώ επιλέξτε μια χώρα.
 please-select-a-course=Παρακαλώ επιλέξτε μια σειρά μαθημάτων.
 please-select-a-currency=Παρακαλώ επιλέξτε ένα νόμισμα.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Επιλέξτε ένα πεδίο κατανομής. (Automatic Translation)
 please-select-a-document-type=Παρακαλώ επιλέξτε έναν έγκυρο τύπο.
 please-select-a-duration=Παρακαλώ επιλέξτε μια διάρκεια.
@@ -11369,6 +11370,7 @@ please-select-a-location=Παρακαλώ επιλέξτε μια θέση.
 please-select-a-menu-item-to-continue=Επιλέξτε ένα στοιχείο μενού για να συνεχίσετε. (Automatic Translation)
 please-select-a-method-on-the-left=Παρακαλώ επιλέξτε μια μέθοδο αριστερά.
 please-select-a-new-repository-hook=Παρακαλώ επιλέξτε ένα νέο hook χώρου φύλαξης.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Παρακαλώ επιλέξτε ένα προϊόν.
 please-select-a-region=Παρακαλώ επιλέξτε μια περιοχή.
 please-select-a-response=Παρακαλώ επιλέξτε μια απάντηση.
