--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -11361,6 +11361,7 @@ please-select-a-country=Por favor, seleccione un país.
 please-select-a-course=Por favor, seleccione un curso.
 please-select-a-currency=Por favor, seleccione una moneda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Por favor, seleccione un idioma por defecto entre los idiomas disponibles en el sitio (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Por favor, seleccione un ámbito de distribución.
 please-select-a-document-type=Por favor, seleccione un tipo válido.
 please-select-a-duration=Por favor, seleccione una duración.
@@ -11371,6 +11372,7 @@ please-select-a-location=Por favor, seleccione una localización.
 please-select-a-menu-item-to-continue=Seleccione un elemento de menú para continuar.
 please-select-a-method-on-the-left=Por favor, seleccione un método en la izquierda.
 please-select-a-new-repository-hook=Por favor, seleccione un nuevo hook para el repositorio.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Por favor, seleccione un producto.
 please-select-a-region=Por favor, seleccione una región.
 please-select-a-response=Por favor, seleccione una respuesta.
