--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Vali riik.
 please-select-a-course=Vali kursus.
 please-select-a-currency=Vali valuuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Valige leviulatus. (Automatic Translation)
 please-select-a-document-type=Vali kehtiv tüüp.
 please-select-a-duration=Vali kestus.
@@ -11369,6 +11370,7 @@ please-select-a-location=Vali asukoht.
 please-select-a-menu-item-to-continue=Jätkamiseks valige menüükäsk. (Automatic Translation)
 please-select-a-method-on-the-left=Valige vasakul soovitud meetod. (Automatic Translation)
 please-select-a-new-repository-hook=Valige uus hoidlakonks. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vali toode.
 please-select-a-region=Vali piirkond.
 please-select-a-response=Vali vastus.
