--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=لطفا یک کشور انتخاب کنید.
 please-select-a-course=لطفا یک کشور انتخاب کنید.
 please-select-a-currency=لطفا یک کشور انتخاب کنید.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=لطفا یک زبان پیش‌فرض از بین زبان های موجود در سایت انتخاب کنید (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=لطفا یک منطقه توزیع را انتخاب کنید
 please-select-a-document-type=لطفا يکی از انواع مستندات را انتخاب کنيد.
 please-select-a-duration=لطفا یک طول زمان مناسب انتخاب کنید.
@@ -11369,6 +11370,7 @@ please-select-a-location=لطفا یک مورد را انتخاب کنید.
 please-select-a-menu-item-to-continue=لطفاً یک مورد منو برای ادامه انتخاب کنید. (Automatic Translation)
 please-select-a-method-on-the-left=لطفا یک روش در سمت چپ انتخاب نمایید.
 please-select-a-new-repository-hook=لطفا یک مخزن افزونه جدید انتخاب کنید.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=لطفا یک محصول انتخاب کنید.
 please-select-a-region=لطفا یک منطقه انتخاب کنید.
 please-select-a-response=لطفا یک پاسخ انتخاب کنید.
