--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11358,6 +11358,7 @@ please-select-a-country=Valitse maa.
 please-select-a-course=Valitse kurssi.
 please-select-a-currency=Valitse valuutta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Valitse vakio kieli, saatavista sivuston kielistä (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Valitse jakelunskooppi.
 please-select-a-document-type=Valitse tyyppi.
 please-select-a-duration=Valitse kesto.
@@ -11368,6 +11369,7 @@ please-select-a-location=Valitse sijainti.
 please-select-a-menu-item-to-continue=Ole hyvä ja valitse valikkokohta jatkaaksesi.
 please-select-a-method-on-the-left=Valitse haluttu toiminta vasemmalta.
 please-select-a-new-repository-hook=Valitse uusi "Repository hook"
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Valitse tuote.
 please-select-a-region=Valitse alue.
 please-select-a-response=Valitse vastaus.
