--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Molimo, odaberite zemlju.
 please-select-a-course=Molimo odaberite tečaj.
 please-select-a-currency=Molimo odaberite valutu.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Please select a distribution scope. (Automatic Copy)
 please-select-a-document-type=Molimo, odaberite ispravan tip.
 please-select-a-duration=Molimo odaberite trajanje.
@@ -11369,6 +11370,7 @@ please-select-a-location=Molimo odaberite mjesto.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Molim odaberite metodu slijeva.
 please-select-a-new-repository-hook=Molimo odaberite novi repozitorij kuka.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Molimo odaberite proizvod.
 please-select-a-region=Molimo, odaberite regiju.
 please-select-a-response=Molimo odaberite odgovor.
