--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -11360,6 +11360,7 @@ please-select-a-country=Seleziona un paese.
 please-select-a-course=Seleziona un corso.
 please-select-a-currency=Seleziona una valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Selezionare una lingua predefinita scelta tra le lingue disponibili per il sito (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Selezionare un ambito di distribuzione.
 please-select-a-document-type=Seleziona un tipo documento.
 please-select-a-duration=Seleziona una durata.
@@ -11370,6 +11371,7 @@ please-select-a-location=Seleziona una posizione.
 please-select-a-menu-item-to-continue=Seleziona una voce di menù per continuare.
 please-select-a-method-on-the-left=Seleziona un metodo a sinistra.
 please-select-a-new-repository-hook=Seleziona un nuovo hook repository.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Seleziona un prodotto.
 please-select-a-region=Seleziona una provincia.
 please-select-a-response=Seleziona una risposta.
