--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=אנא בחר במדינה
 please-select-a-course=אנא בחר בקורס
 please-select-a-currency=אנא בחר במטבע
 please-select-a-default-language-among-the-available-languages-of-the-site-x=אנא בחר שפת ברירת מחדל מבין השפות הזמינות באתר (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=אנא בחר תחום הפצה.
 please-select-a-document-type=אנא בחר סוג מסמך.
 please-select-a-duration=אנא בחר במיקום
@@ -11369,6 +11370,7 @@ please-select-a-location=אנא בחר במיקום
 please-select-a-menu-item-to-continue=אנא בחר פריט תפריט כדי להמשיך.
 please-select-a-method-on-the-left=אנא בחר שיטה בצד שמאל.
 please-select-a-new-repository-hook=אנא בחר קרס מאגר חדש.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=אנא בחר במוצר
 please-select-a-region=אנא בחר באזור
 please-select-a-response=אנא בחר בתגובה
