--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -11361,6 +11361,7 @@ please-select-a-country=国を選択してください。
 please-select-a-course=コースを選択してください。
 please-select-a-currency=通貨単位を選択してください。
 please-select-a-default-language-among-the-available-languages-of-the-site-x=(<em>{0}</em>)で有効な言語からデフォルト言語を選択してください
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=表示先範囲を選択してください。
 please-select-a-document-type=ドキュメントタイプを選択してください。
 please-select-a-duration=持続時間を選択してください。
@@ -11371,6 +11372,7 @@ please-select-a-location=ロケーションを選択してください。
 please-select-a-menu-item-to-continue=継続するにはメニュー項目を選択してください
 please-select-a-method-on-the-left=左からメソッドを選択してください。
 please-select-a-new-repository-hook=新しいリポジトリフックを選択してください。
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=プロダクトを選択してください。
 please-select-a-region=地域(都道府県) を選択してください。
 please-select-a-response=応答を選択してください。
