--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Pasirinkite šalį. (Automatic Translation)
 please-select-a-course=Pasirinkite kursą. (Automatic Translation)
 please-select-a-currency=Pasirinkite valiutą. (Automatic Translation)
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Pasirinkite paskirstymo aprėptį. (Automatic Translation)
 please-select-a-document-type=Prašome pasirinkti dokumento tipą.
 please-select-a-duration=Pasirinkite trukmę. (Automatic Translation)
@@ -11369,6 +11370,7 @@ please-select-a-location=Pasirinkite vietą. (Automatic Translation)
 please-select-a-menu-item-to-continue=Norėdami tęsti, pasirinkite meniu komandą. (Automatic Translation)
 please-select-a-method-on-the-left=Pasirinkite metodą kairėje. (Automatic Translation)
 please-select-a-new-repository-hook=Pasirinkite naują saugyklos kabliuką. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Pasirinkite produktą. (Automatic Translation)
 please-select-a-region=Pasirinkite regioną. (Automatic Translation)
 please-select-a-response=Pasirinkite atsakymą. (Automatic Translation)
