--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Sila pilih negara. (Automatic Translation)
 please-select-a-course=Sila pilih kursus. (Automatic Translation)
 please-select-a-currency=Sila pilih mata wang. (Automatic Translation)
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Sila pilih skop pengedaran. (Automatic Translation)
 please-select-a-document-type=Sila pilih jenis dokumen. (Automatic Translation)
 please-select-a-duration=Sila pilih satu tempoh. (Automatic Translation)
@@ -11369,6 +11370,7 @@ please-select-a-location=Sila pilih lokasi. (Automatic Translation)
 please-select-a-menu-item-to-continue=Sila pilih item menu untuk meneruskan. (Automatic Translation)
 please-select-a-method-on-the-left=Sila pilih satu kaedah di sebelah kiri. (Automatic Translation)
 please-select-a-new-repository-hook=Sila pilih cangkuk repositori baru. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Sila pilih produk. (Automatic Translation)
 please-select-a-region=Sila pilih rantau. (Automatic Translation)
 please-select-a-response=Sila pilih jawapan. (Automatic Translation)
