--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Vennligst velg et land.
 please-select-a-course=Vennligst velg et kurs.
 please-select-a-currency=Vennligst velg en valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Vennligst velg et standardspråk blant språkene på nettstedet (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vennligst velg et virksomhetsområde for distribusjon.
 please-select-a-document-type=Vennligst velg en regeltype.
 please-select-a-duration=Vennligst velg et tidsrom.
@@ -11369,6 +11370,7 @@ please-select-a-location=Vennligst velg et sted.
 please-select-a-menu-item-to-continue=Velg et menyelement for å fortsette. (Automatic Translation)
 please-select-a-method-on-the-left=Vennligst velg en metode til venstre.
 please-select-a-new-repository-hook=Vennligst velg en ny depot-hook.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vennligst velg et produkt.
 please-select-a-region=Vennligst velg en region.
 please-select-a-response=Vennligst velg en respons.
