--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11362,6 +11362,7 @@ please-select-a-country=Selecteer een land.
 please-select-a-course=Selecteer een cursus.
 please-select-a-currency=Selecteer een munt.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Selecteer een standaardtaal uit de beschikbare talen van de site (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Selecteer een distributiebereik.
 please-select-a-document-type=Selecteer een regeltype.
 please-select-a-duration=Selecteer een duur.
@@ -11372,6 +11373,7 @@ please-select-a-location=Selecteer een locatie.
 please-select-a-menu-item-to-continue=Selecteer een menu-item om door te gaan.
 please-select-a-method-on-the-left=Selecteer links een methode.
 please-select-a-new-repository-hook=Selecteer een nieuwe bewaarplaats.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Selecteer een product.
 please-select-a-region=Selecteer een regio.
 please-select-a-response=Selecteer een reactie.
