--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Te rog selecteaza o tara.
 please-select-a-course=Te rog selecteaza un curs.
 please-select-a-currency=Te rog selecteaza o moneda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Selectați un domeniu de distribuire. (Automatic Translation)
 please-select-a-document-type=Te rog selecteaza un tip valid.
 please-select-a-duration=Te rog selecteaza o durata.
@@ -11369,6 +11370,7 @@ please-select-a-location=Te rog selecteaza o locatie.
 please-select-a-menu-item-to-continue=Selectați un element de meniu pentru a continua. (Automatic Translation)
 please-select-a-method-on-the-left=Selectați o metodă din stânga. (Automatic Translation)
 please-select-a-new-repository-hook=Te rog selecteaza un nou element din repertoriu.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Te rog selecteaza un produs.
 please-select-a-region=Te rog selecteaza o regiune.
 please-select-a-response=Te rog selecteaza un raspuns.
