--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Пожалуйста выберите страну.
 please-select-a-course=Пожалуйста, выберите курс.
 please-select-a-currency=Пожалуйста, выберите валюту.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Пожалуйста, выберите область распространения.
 please-select-a-document-type=Пожалуйста, выберите тип правила.
 please-select-a-duration=Пожалуйста, выберите длительность.
@@ -11369,6 +11370,7 @@ please-select-a-location=Пожалуйста, выберите местопол
 please-select-a-menu-item-to-continue=Пожалуйста, выберите пункт меню, чтобы продолжить. (Automatic Translation)
 please-select-a-method-on-the-left=Пожалуйста, выберите метод из левого меню.
 please-select-a-new-repository-hook=Пожалуйста, выберите новый hook репозитария.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Пожалуйста, выберите продукт.
 please-select-a-region=Пожалуйста выберите регион.
 please-select-a-response=Пожалуйста, выберите ответ.
