--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Zadajte, prosím, krajinu.
 please-select-a-course=Zadajte, prosím, kurz.
 please-select-a-currency=Zadajte, prosím, menu.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Vyberte, prosím, prednastavené jazyk spomedzi dostupných jazykov sídla (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vyberte, prosím, rozsah distribúcie.
 please-select-a-document-type=Vyberte, prosím, typ pravidla.
 please-select-a-duration=Zadajte, prosím, trvanie.
@@ -11369,6 +11370,7 @@ please-select-a-location=Zadajte, prosím, lokáciu.
 please-select-a-menu-item-to-continue=Pokračujte výberom položky ponuky. (Automatic Translation)
 please-select-a-method-on-the-left=Vyberte, prosím, metódu naľavo.
 please-select-a-new-repository-hook=Vyberte, prosím, nový úložiskový "hook".
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vyberte, prosím, produkt.
 please-select-a-region=Zadajte, prosím, oblasť.
 please-select-a-response=Vyberte, prosím, odpoveď.
