--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Lütfen bir ülke seçin.
 please-select-a-course=Lütfen bir ders seçin.
 please-select-a-currency=Lütfen bir para birimi seçin.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Lütfen bir dağıtım kapsamı seçin. (Automatic Translation)
 please-select-a-document-type=Lütfen bir tür seçin.
 please-select-a-duration=Lütfen bir süre seçin.
@@ -11369,6 +11370,7 @@ please-select-a-location=Lütfen bir yer seçin.
 please-select-a-menu-item-to-continue=Lütfen devam etmek için bir menü öğesi seçin. (Automatic Translation)
 please-select-a-method-on-the-left=Lütfen solda bir yöntem seçin. (Automatic Translation)
 please-select-a-new-repository-hook=Lütfen yeni bir depo kancası seçin. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Lütfen bir ürün seçin.
 please-select-a-region=Lütfen bir bölge seçin.
 please-select-a-response=Lütfen bir cevap seçin.
