--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Vui lòng lựa chọn một nước.
 please-select-a-course=Vui lòng lựa chọn một nguồn.
 please-select-a-currency=Vui lòng lựa chọn một loại tiền tệ.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Bạn hãy chọn ngôn ngữ mặc định trong các ngôn ngữ có sẵn của trang thông tin (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Bạn hãy chọn phạm vi phân tán.
 please-select-a-document-type=Vui lòng kiểu luật.
 please-select-a-duration=Vui lòng lựa chọn một thời hạn.
@@ -11369,6 +11370,7 @@ please-select-a-location=Vui lòng lựa chọn một vị trí địa lý.
 please-select-a-menu-item-to-continue=Vui lòng chọn một mục menu để tiếp tục. (Automatic Translation)
 please-select-a-method-on-the-left=Vui lòng lựa chọn một phương thức ở bên trái.
 please-select-a-new-repository-hook=Vui lòng lựa chọn một nơi( repository) lưu trữ mới.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vui lòng lựa chọn một sản phẩm.
 please-select-a-region=Vui lòng lựa chọn một vùng.
 please-select-a-response=Vui lòng lựa chọn một đáp ứng.
