--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -11361,6 +11361,7 @@ please-select-a-country=请选择国家。
 please-select-a-course=请选择课程。
 please-select-a-currency=请选择货币。
 please-select-a-default-language-among-the-available-languages-of-the-site-x=请在站点的可用语言中选择默认语言(<em>{0}</em>)。
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=请选择一个发布的范围。
 please-select-a-document-type=请选择规则类型。
 please-select-a-duration=请选择持续时间。
@@ -11371,6 +11372,7 @@ please-select-a-location=请选择区域。
 please-select-a-menu-item-to-continue=请选择一个菜单项以继续。
 please-select-a-method-on-the-left=请从左侧选项中选择一种方法。
 please-select-a-new-repository-hook=请选择新的存储库hook。
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=请选择产品。
 please-select-a-region=请选择区域。
 please-select-a-response=请选择答复。
