--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Моля, изберете страна.
 please-select-a-course=Моля, изберете кукс.
 please-select-a-currency=Моля, изберете валута.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Изберете обхват на разпространение. (Automatic Translation)
 please-select-a-document-type=Моля, изберете валиден тип.
 please-select-a-duration=Моля, изберете продължителност.
@@ -11369,6 +11370,7 @@ please-select-a-location=Моля, изберете място.
 please-select-a-menu-item-to-continue=Изберете елемент от менюто, за да продължите. (Automatic Translation)
 please-select-a-method-on-the-left=Изберете метод вляво. (Automatic Translation)
 please-select-a-new-repository-hook=Моля, изберете нова закачка в хранилището. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Моля, изберете продукт.
 please-select-a-region=Моля, изберете район.
 please-select-a-response=Моля, изберете отговор.
