--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Vælg venligst et land.
 please-select-a-course=Vælg venligst et kursus.
 please-select-a-currency=Vælg venligst en valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Vælg et distributionsområde. (Automatic Translation)
 please-select-a-document-type=Vælg venligst a valid type.
 please-select-a-duration=Vælg venligst en varighed.
@@ -11369,6 +11370,7 @@ please-select-a-location=Vælg venligst en placering.
 please-select-a-menu-item-to-continue=Vælg et menupunkt for at fortsætte. (Automatic Translation)
 please-select-a-method-on-the-left=Please select a method on the left. (Automatic Copy)
 please-select-a-new-repository-hook=Vælg venligst et nyt lagrings-hook.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Vælg venligst et produkt.
 please-select-a-region=Vælg venligst en region.
 please-select-a-response=Vælg venligst et svar.
