--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Please select a country. (Automatic Copy)
 please-select-a-course=Please select a course. (Automatic Copy)
 please-select-a-currency=Please select a currency. (Automatic Copy)
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Please select a distribution scope. (Automatic Copy)
 please-select-a-document-type=Please select a document type. (Automatic Copy)
 please-select-a-duration=Please select a duration. (Automatic Copy)
@@ -11369,6 +11370,7 @@ please-select-a-location=Please select a location. (Automatic Copy)
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Please select a method on the left. (Automatic Copy)
 please-select-a-new-repository-hook=Please select a new repository hook. (Automatic Copy)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Please select a product. (Automatic Copy)
 please-select-a-region=Please select a region. (Automatic Copy)
 please-select-a-response=Please select a response. (Automatic Copy)
