--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Mesedez, aukeratu herrialde bat.
 please-select-a-course=Mesedez, aukeratu ibilbide bat.
 please-select-a-currency=Mesedez, aukeratu moneta bat.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Please select a distribution scope. (Automatic Copy)
 please-select-a-document-type=Mesedez, aukeratu mota egoki bat.
 please-select-a-duration=Mesedez, aukeratu iraupen bat.
@@ -11369,6 +11370,7 @@ please-select-a-location=Mesedez, aukeratu kokapen bat.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Mesedez, aukeratu metodo bat ezkerretik.
 please-select-a-new-repository-hook=Mesedez, aukeratu hook biltegi berri bat.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Mesedez, aukeratu produktu bat.
 please-select-a-region=Mesedez, aukeratu eskualde bat.
 please-select-a-response=Mesedez, aukeratu erantzun bat.
