--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -11361,6 +11361,7 @@ please-select-a-country=Veuillez choisir un pays.
 please-select-a-course=Veuillez choisir un cours.
 please-select-a-currency=Veuillez choisir une devise.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Veuillez sélectionner une langue par défaut parmi le langues disponibles du site (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Veuillez selectionner une étendue de distribution.
 please-select-a-document-type=Veuillez choisir un type valide.
 please-select-a-duration=Veuillez choisir une durée.
@@ -11371,6 +11372,7 @@ please-select-a-location=Veuillez choisir un endroit.
 please-select-a-menu-item-to-continue=Veuillez sélectionner un élément de menu pour pouvoir continuer.
 please-select-a-method-on-the-left=Veuillez sélectionner une méthode sur la gauche.
 please-select-a-new-repository-hook=Veuillez choisir un nouveau crochet de dépôt.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Veuillez choisir un produit.
 please-select-a-region=Veuillez choisir une région.
 please-select-a-response=Veuillez choisir une réponse.
