--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Por favor, selecciona un país.
 please-select-a-course=Por favor, selecciona un curso.
 please-select-a-currency=Por favor, selecciona unha moeda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Por favor, seleccione un ámbito de distribución.
 please-select-a-document-type=Por favor, selecciona un tipo válido.
 please-select-a-duration=Por favor, selecciona unha duración.
@@ -11369,6 +11370,7 @@ please-select-a-location=Por favor, selecciona unha localización.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Please select a method on the left. (Automatic Copy)
 please-select-a-new-repository-hook=Por favor, selecciona un novo repositorio de hook.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Por favor, selecciona un produto.
 please-select-a-region=Por favor, selecciona unha rexión.
 please-select-a-response=Por favor, selecciona unha resposta.
