--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11362,6 +11362,7 @@ please-select-a-country=Válassz országot!
 please-select-a-course=Válassz tanfolyamot!
 please-select-a-currency=Válassz pénznemet!
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Válassz egy alapértelmezett nyelvet a webhely (<em>{0}</em>) választható nyelvei közül!
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Válassz egy disztribúciós hatókört!
 please-select-a-document-type=Válassz egy dokumentum típust!
 please-select-a-duration=Válassz időtartamot!
@@ -11372,6 +11373,7 @@ please-select-a-location=Válassz egy helyet!
 please-select-a-menu-item-to-continue=Folytatáshoz Jelöljön meg egy menüpontot.
 please-select-a-method-on-the-left=Ki kell választani egy metódust a bal oldalról.
 please-select-a-new-repository-hook=Válassz új tároló hookot!
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Válassz terméket!
 please-select-a-region=Válassz régiót!
 please-select-a-response=Válasz választ.
