--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Silakan pilih sebuah negara.
 please-select-a-course=Silakan pilih kursus.
 please-select-a-currency=Silakan pilih mata uang.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Silakan pilih lingkup distribusi. (Automatic Translation)
 please-select-a-document-type=Silakan pilih Jenis yang berlaku
 please-select-a-duration=Silakan pilih jangka waktunya.
@@ -11369,6 +11370,7 @@ please-select-a-location=Silakan pilih lokasi.
 please-select-a-menu-item-to-continue=Silakan pilih butir menu untuk melanjutkan. (Automatic Translation)
 please-select-a-method-on-the-left=Silakan pilih metode di sebelah kiri.
 please-select-a-new-repository-hook=Silakan pilih hook repositori baru.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Silakan pilih produk.
 please-select-a-region=Silakan pilih daerah.
 please-select-a-response=Silakan pilih jawaban.
