--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=나라를 선정하십시요.
 please-select-a-course=과정을 선정하십시오.
 please-select-a-currency=통화를 선정하십시오.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=배포 범위를 선택하십시오. (Automatic Translation)
 please-select-a-document-type=유효한 유형을 선정하십시요.
 please-select-a-duration=내구를 선정하십시오.
@@ -11369,6 +11370,7 @@ please-select-a-location=위치를 선정하십시오.
 please-select-a-menu-item-to-continue=계속하려면 메뉴 항목을 선택하십시오. (Automatic Translation)
 please-select-a-method-on-the-left=왼쪽에 있는 방법을 선택하십시오. (Automatic Translation)
 please-select-a-new-repository-hook=새 리포지토리 후크를 선택하십시오. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=제품을 선정하십시오.
 please-select-a-region=지구를 선정하십시요.
 please-select-a-response=응답을 선정하십시오.
