--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -11362,6 +11362,7 @@ please-select-a-country=Selecteer een land.
 please-select-a-course=Selecteer een cursus.
 please-select-a-currency=Selecteer een munt.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Please select a distribution scope. (Automatic Copy)
 please-select-a-document-type=Selecteer een geldig type.
 please-select-a-duration=Selecteer een duur.
@@ -11372,6 +11373,7 @@ please-select-a-location=Selecteer een locatie.
 please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
 please-select-a-method-on-the-left=Selecteer links een methode.
 please-select-a-new-repository-hook=Selecteer een nieuw repository.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Selecteer een product.
 please-select-a-region=Selecteer een gebied.
 please-select-a-response=Selecteer een reactie.
