--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Wybierz kraj.
 please-select-a-course=Wybierz kurs.
 please-select-a-currency=Wybierz walutę.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Wybierz domyślny język spośród języków dostępnych w witrynie (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Określ zakres dystrybucji.
 please-select-a-document-type=Wybierz typ reguły.
 please-select-a-duration=Wybierz czas trwania.
@@ -11369,6 +11370,7 @@ please-select-a-location=Wybierz lokalizację.
 please-select-a-menu-item-to-continue=Wybierz element menu, aby kontynuować. (Automatic Translation)
 please-select-a-method-on-the-left=Wybierz jedną z metod po lewej.
 please-select-a-new-repository-hook=Wybierz nowy hook z repozytorium.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Wybierz produkt.
 please-select-a-region=Wybierz region.
 please-select-a-response=Wybierz odpowiedź.
