--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Por favor, selecione um país.
 please-select-a-course=Por favor, selecione um curso.
 please-select-a-currency=Por favor, selecione uma moeda.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Por favor selecione o idioma padrão entre os idiomas disponíveis do site (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Por favor, selecione o escopo de distribuição.
 please-select-a-document-type=Por favor, selecione um tipo de regra.
 please-select-a-duration=Por favor, selecione uma duração.
@@ -11369,6 +11370,7 @@ please-select-a-location=Por favor, selecione um localidade.
 please-select-a-menu-item-to-continue=Por favor, selecione um item de menu para continuar.
 please-select-a-method-on-the-left=Por favor, selecione um dos método à esquerda.
 please-select-a-new-repository-hook=Por favor, selecione um novo hook de repositório.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Por favor, selecione um produto.
 please-select-a-region=Por favor, selecione uma região.
 please-select-a-response=Por favor, selecione uma resposta.
