--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Izberite državo.
 please-select-a-course=Izberite smer.
 please-select-a-currency=Izberite valuto.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Izberite obseg distribucije. (Automatic Translation)
 please-select-a-document-type=Izberite pravilen tip.
 please-select-a-duration=Izberite trajanje.
@@ -11369,6 +11370,7 @@ please-select-a-location=Izberite lokacijo.
 please-select-a-menu-item-to-continue=Izberite element menija, ki ga želite nadaljevati. (Automatic Translation)
 please-select-a-method-on-the-left=Izberite metodo na levi. (Automatic Translation)
 please-select-a-new-repository-hook=Izberite nov kavelj za skladišče. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Izberite izdelek.
 please-select-a-region=Izberite področje.
 please-select-a-response=Izberite odgovor.
