--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Välj ett land.
 please-select-a-course=Välj en kurs.
 please-select-a-currency=Välj en valuta.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Välj ett standardspråk från de tillgängliga språken på webbplatsen (<em>{0}</em>).
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Välj ett distributionsomfång.
 please-select-a-document-type=Välj en regeltyp.
 please-select-a-duration=Välj en löptid.
@@ -11369,6 +11370,7 @@ please-select-a-location=Välj plats.
 please-select-a-menu-item-to-continue=Välj ett menyobjekt för att fortsätta.
 please-select-a-method-on-the-left=Välj en metod till vänster.
 please-select-a-new-repository-hook=Välj en ny repository-koppling.
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Välj produkt.
 please-select-a-region=Välj en region.
 please-select-a-response=Välj ett svar.
