--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -11359,6 +11359,7 @@ please-select-a-country=Будь ласка виберіть країну.
 please-select-a-course=Будь ласка виберіть курс.
 please-select-a-currency=Будь ласка виберіть валюту.
 please-select-a-default-language-among-the-available-languages-of-the-site-x=Please select a default language among the available languages of the site (<em>{0}</em>). (Automatic Copy)
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=Виберіть область розповсюдження. (Automatic Translation)
 please-select-a-document-type=Будь ласка, виберіть правильний тип.
 please-select-a-duration=Будь ласка виберіть тривалість.
@@ -11369,6 +11370,7 @@ please-select-a-location=Будь ласка виберіть місцезнах
 please-select-a-menu-item-to-continue=Будь ласка, виберіть пункт меню для продовження. (Automatic Translation)
 please-select-a-method-on-the-left=Будь ласка, виберіть метод ліворуч. (Automatic Translation)
 please-select-a-new-repository-hook=Будь ласка, оберіть новий гак сховища. (Automatic Translation)
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=Будь ласка виберіть продукт.
 please-select-a-region=Будь ласка виберіть регіон.
 please-select-a-response=Будь ласка виберіть відповідь.
