--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -11360,6 +11360,7 @@ please-select-a-country=請選擇一個國家。
 please-select-a-course=請選擇一條路線。
 please-select-a-currency=請選擇貨幣。
 please-select-a-default-language-among-the-available-languages-of-the-site-x=請在這站台可用語系中選擇一個預設語系 (<em>{0}</em>)。
+please-select-a-delivery-terms=Please select a delivery terms. (Automatic Copy)
 please-select-a-distribution-scope=請選擇一個發布範圍。
 please-select-a-document-type=請選擇一個文件類型。
 please-select-a-duration=請選擇期間。
@@ -11370,6 +11371,7 @@ please-select-a-location=請選擇一個地點。
 please-select-a-menu-item-to-continue=請選擇一個選單項目以繼續。
 please-select-a-method-on-the-left=請在左邊選擇一個方法。
 please-select-a-new-repository-hook=請選擇一個新的資源庫hook。
+please-select-a-payment-terms==Please select a payments terms. (Automatic Copy)
 please-select-a-product=請選擇一個產品。
 please-select-a-region=請選擇一個區域。
 please-select-a-response=請選擇一個反應。
